RESOLVED FIXED89127
Fix framebuffer completeness test
https://bugs.webkit.org/show_bug.cgi?id=89127
Summary Fix framebuffer completeness test
Gregg Tavares
Reported 2012-06-14 14:54:46 PDT
Fix framebuffer completeness test
Attachments
Patch (10.48 KB, patch)
2012-06-14 14:55 PDT, Gregg Tavares
no flags
Patch (16.36 KB, patch)
2012-06-14 15:43 PDT, Gregg Tavares
no flags
Gregg Tavares
Comment 1 2012-06-14 14:55:22 PDT
Gregg Tavares
Comment 2 2012-06-14 15:43:11 PDT
Gregg Tavares
Comment 3 2012-06-14 15:44:08 PDT
The old code disallowed DEPTH_STENCIL attachments so I needed to update the expectations
Zhenyao Mo
Comment 4 2012-06-14 16:17:27 PDT
LGTM, thanks for fixing this.
Kenneth Russell
Comment 5 2012-06-14 17:44:10 PDT
Comment on attachment 147665 [details] Patch r=me based on Mo's review.
WebKit Review Bot
Comment 6 2012-06-14 22:54:09 PDT
Comment on attachment 147665 [details] Patch Clearing flags on attachment: 147665 Committed r120401: <http://trac.webkit.org/changeset/120401>
WebKit Review Bot
Comment 7 2012-06-14 22:54:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.