Fix framebuffer completeness test https://bugs.webkit.org/show_bug.cgi?id=89127

Patch by Gregg Tavares <gman@google.com> on 2012-06-14
Reviewed by Kenneth Russell.

No new tests just fixing failing tests.

* html/canvas/WebGLFramebuffer.cpp:
(WebCore::WebGLFramebuffer::initializeAttachments):
* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::isTexInternalFormatColorBufferCombinationValid):
* platform/graphics/GraphicsContext3D.cpp:
(WebCore::GraphicsContext3D::getClearBitsByAttachmentType):
(WebCore):
(WebCore::GraphicsContext3D::getClearBitsByFormat):
(WebCore::GraphicsContext3D::getChannelBitsByFormat):
* platform/graphics/GraphicsContext3D.h:

Canonical link: https://commits.webkit.org/107015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120401 268f45cc-cd09-0410-ab3c-d52691b4dbfc